--- a/index.css
+++ b/index.css
@@ -2,12 +2,10 @@ html, body {
     height: 100%;
 }
 body{
-    margin: 0;
-    padding: 0;
     font-size: 16px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-h1,p {
+h1,p,body {
     margin: 0;
     padding: 0;
 }
@@ -16,29 +14,28 @@ a{
     color: inherit;
 }
 img{
-        width: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 main{
-    height: 100vh;
+   /* height: 100%; */ 
     background-color: rgb(2, 2, 125);
     display: grid;
     place-content: center;
-
 }
 .main-sec{
     display: flex;
     flex-direction: column;
-    margin: 3rem;
 }
 .logo{
     text-align: center;
-   padding: 1rem 0;   
+    padding: 1rem 0;  
 }
 .logo a {
     display: inline-block;
     font-size: 2rem;
     color:whitesmoke ;
- 
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
 }
 .banner{
     display: flex;
@@ -50,21 +47,28 @@ main{
     .banner{
         flex-direction: column;
     }
-
+    .main-sec{
+        margin: 2rem;
+        padding: 1rem;
+    }
+    .btn-container{
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
 }
 
 h1{
-    font-size: 3rem;
+    font-size: 2.3rem;
     padding: 2rem 0;
 }
 p{
     font-size: 1.5rem;
-
     padding-top: 0;
     color: rgb(0, 0, 0);
 }
 .right-sec{
     padding: 2rem;
+    flex-grow: 1;
 }
 .btn-container{
     padding: 2rem;
@@ -76,15 +80,20 @@ img{
     border-radius: 10px;
 }
 .btn{
-    padding: 1rem 2rem;
+    padding: 0.8rem 1.2rem;
     border-radius: 10px;
     border: 0;
     outline: none;
     font-size: 1.1rem;
     margin-top: 1rem;
+    font-weight: 600;
+    color: rgb(39, 14, 39);
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 700px) {
+    main{
+        height: 100vh;
+    }
     .main-sec{
         margin: 1rem;
     }
@@ -92,57 +101,72 @@ img{
         font-size: 1.5rem;
     }
     h1{
-        font-size: 4rem;
+        font-size: 2.8rem;
     }
+   img{
+    height: 50vh;
+   }
     p{
-        font-size: 1.8rem;
+        font-size: 1.2rem;
     }
-    img{
-        height: 50vh;
-        object-fit: cover;
+    .contact-btn {
+        padding: 1rem 1.2rem;
     }
     .btn-container{
        justify-content: start;
        padding: 2rem 0;
     }
+     .btn-container{
+        flex-wrap: wrap;
+    }
 }
 @media screen and (min-width: 1000px) {
+    .main-sec{
+         height: 100vh;
+    }
     .logo a {
         font-size: 2rem;
     }
     h1{
-        font-size: 6rem;
+        font-size: 4rem;
     }
     p{
-        font-size: 2rem;
+        font-size: 1.4rem;
+    }
+    img{
+        height: 80vh;
+        border-radius: 0px;
     }
     .btn-container{
-       justify-content: center;
+       justify-content: start;
        padding: 2rem 0;
     }
-    
+    .btn{
+    padding: 1rem 1.8rem;
+    }
 }
 @media screen and (min-width: 1200px) {
     .main-sec{
-        margin: 2rem;
+        margin: 3rem;
     }
     .logo a {
         font-size: 2.5rem;
     }
-    p{
-        font-size: 2.5rem;
-    }
+    
     .btn-container{
        justify-content: center;
        padding: 2rem 0;
     }
     
 }
-
+.left-sec{
+    flex-grow: 1;
+}
 
 .contact-btn {
     background-color: rgb(210, 231, 162);
     padding: 1rem 2rem;
-    border-radius: 10px;
-    margin:1rem auto ;
+    border-radius: 10px 10px 0 0;
+    font-weight: 600;
+    display: inline-block;
 }
