--- a/index.css
+++ b/index.css
@@ -18,7 +18,6 @@ img{
     object-fit: cover;
 }
 main{
-   /* height: 100%; */ 
     background-color: rgb(2, 2, 125);
     display: grid;
     place-content: center;
@@ -29,13 +28,14 @@ main{
 }
 .logo{
     text-align: center;
-    padding: 1rem 0;  
+    padding-bottom: 1.2rem;  
 }
 .logo a {
     display: inline-block;
-    font-size: 2rem;
+    font-size: 1.9rem;
     color:whitesmoke ;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 600;
 }
 .banner{
     display: flex;
@@ -43,7 +43,7 @@ main{
     align-items: center;
     background-color: rosybrown;
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 699px) {
     .banner{
         flex-direction: column;
     }
@@ -55,10 +55,13 @@ main{
         flex-direction: column;
         flex-wrap: wrap;
     }
+    h1, p {
+        text-align: center;
+    }
 }
 
 h1{
-    font-size: 2.3rem;
+    font-size: 2.7rem;
     padding: 2rem 0;
 }
 p{
@@ -98,13 +101,18 @@ img{
         margin: 1rem;
     }
     .logo a {
-        font-size: 1.5rem;
+        font-size: 2.2rem;
+    }
+    .logo{
+        padding-top: 1rem;
+        padding-bottom: 1rem;
     }
     h1{
-        font-size: 2.8rem;
+        font-size: 3.2rem;
     }
    img{
-    height: 50vh;
+    height: 80vh;
+    width: 50vw;
    }
     p{
         font-size: 1.2rem;
@@ -125,13 +133,17 @@ img{
          height: 100vh;
     }
     .logo a {
-        font-size: 2rem;
+        padding-top: 1rem;
+        font-size: 2.3rem;
     }
     h1{
         font-size: 4rem;
     }
     p{
         font-size: 1.4rem;
+    }
+    h1, p {
+        text-align: center;
     }
     img{
         height: 80vh;
@@ -145,6 +157,12 @@ img{
     padding: 1rem 1.8rem;
     }
 }
+@media screen and (min-width: 1000px) and (max-width: 1199px) {
+    h1,p{
+        text-align: start;
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .main-sec{
         margin: 3rem;
@@ -157,7 +175,10 @@ img{
        justify-content: center;
        padding: 2rem 0;
     }
-    
+    .banner{
+        justify-content: center;
+    }
+
 }
 .left-sec{
     flex-grow: 1;
